[package]
name = "DidIAsk"
version = "0.1.0"
authors = ["Keval Shah <captainrex493@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
#serenity = "0.8"
rand = "0.5.5"
chrono = "0.4"


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache"
]
version = "0.8"